--- a/app/src/main/res/layout/item_denuncia.xml
+++ b/app/src/main/res/layout/item_denuncia.xml
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/foto_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_alignParentStart="true"
             android:layout_marginEnd="16dp"
             app:srcCompat="@mipmap/ic_launcher"/>
